--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="./style.css">
+
     <title>Youtube-Api</title>
 </head>
+
 <body>
-    
+
+    <nav class="navbar navbar-light light-blue lighten-4 container-fluid">
+        <div class="row logo  ">
+            <div class="col-12">
+                <span><i class="burger navbar-brand fas fa-bars"></i></span>
+                <img class="logo-yt" src="assests/images/lego-youtube.png"></i>
+            </div>
+        </div>
+    </nav>
+
 </body>
+
 </html>
