--- a/index.html
+++ b/index.html
@@ -17,17 +17,28 @@
     <title>Youtube-Api</title>
 </head>
 
-<body>
-
-    <nav class="navbar navbar-light light-blue lighten-4 container-fluid">
-        <div class="row logo  ">
-            <div class="col-12">
+<body class="container-fluid">
+    <div class="row logo  ">
+        <nav class="navbar navbar-light light-blue lighten-4 container-fluid">
+            <div class="col-4">
                 <span><i class="burger navbar-brand fas fa-bars"></i></span>
                 <img class="logo-yt" src="assests/images/lego-youtube.png"></i>
             </div>
-        </div>
-    </nav>
-
+            <div class="col-4 form-box">
+                <form class="d-flex align-items-center" action="">
+                    <input class="w-75 p-2 h-25 border" type="text">
+                    <input class="w-10 p-2 h-25 border" type="text">
+                    <i class="m-3 h3 text-secondary fas fa-microphone "></i>
+                </form>        
+            </div>
+            <div class="col-4 d-flex justify-content-end">
+                <i class="p-2 h3 text-secondary fas fa-video"></i>
+                <i class="p-2 h3 text-secondary fas fa-th"></i>
+                <i class="p-2 h3 text-secondary fas fa-bell"></i>
+                <i class="p-2 h3 text-secondary fas fa-user-circle"></i>
+            </div>
+        </nav>
+    </div>
 </body>
 
 </html>
